apps/arr-stack/handbrake/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: handbrake
spec:
  replicas: 1
  selector:
    matchLabels:
      app: handbrake
  template:
    metadata:
      name: handbrake
      labels:
        app: handbrake
    spec:
      containers:
        - name: handbrake
          image: jlesage/handbrake:v24.03.1-debug
          volumeMounts:
            - mountPath: /config
              name: handbrake-config
            # - name: hooks
            #   mountPath: "/config/hooks/pre_conversion.sh"
            #   readOnly: false
            #   subPath: pre_conversion.sh
            - mountPath: /storage
              name: handbrake-storage
            - mountPath: /watch
              name: arr-smb-volume
              subPath: watch
            - mountPath: /output
              name: arr-smb-volume
              subPath: output
          ports:
            - name: handbrake
              containerPort: 5800
      volumes:
        - name: handbrake-config
          persistentVolumeClaim:
            claimName: handbrake-config-pvc
        - name: handbrake-storage
          persistentVolumeClaim:
            claimName: handbrake-storage-pvc
        - name: arr-smb-volume
          persistentVolumeClaim:
            claimName: arr-smb-volume-pvc
        - name: hooks
          configMap:
            # Provide the name of the ConfigMap you want to mount.
            name: handbrake-hooks
            defaultMode: 0777
            # An array of keys from the ConfigMap to create as files
            items:
            - key: "pre_conversion.sh"
              path: "pre_conversion.sh"
