apps/arr-stack/handbrake/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: handbrake
  namespace: handbrake
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
spec:
  selector:
    app: handbrake
  ports:
    - name: handbrake
      port: 5800
      targetPort: handbrake
  type: ClusterIP
