apps/arr-stack/handbrake/base/ingress.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: handbrake-internal
  annotations:
    external-dns.alpha.kubernetes.io/hostname: handbrake.labs.andrewpjackson.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: traefik-external
  labels:
    app: handbrake
spec:
  entryPoints:
    - web-int-tls
  routes:
    - match: Host(`handbrake.labs.andrewpjackson.com`)
      kind: Rule
      services:
        - kind: Service
          name: handbrake
          port: 5800
  tls:
    secretName: labs-andrewpjackson-com-tls
